--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,11 @@ dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   percent_indicator: ^4.2.2
   fl_chart: ^0.55.2
+  share_plus: ^6.3.0
+  just_audio: ^0.9.29
+  countup: ^0.1.4
+
+
 
 flutter_icons:
   android: "launcher_icon"
